@@ -40,8 +40,4 @@ zzip_ssize_t getUncompressedSize(ZZIP_FILE * je)
   return -1;
 }
 
-ZZIP_FILE *lookupJarFile(ZZIP_DIR *jf, zzip_char_t *entry_name)
-{
-  return zzip_file_open(jf, entry_name, 0);
-}
 
